Katelyn milestone-02 revision

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -24,6 +24,7 @@
       </div>
       <div id="create-post-popup"></div>
       <button id="HOME-create-post-button"></button>
+      <button id ="refresh-button">Refresh!</button>
     </div>
 
     <div id="create-post-page">
