--- a/src/client/index.html
+++ b/src/client/index.html
@@ -24,7 +24,8 @@
       </div>
       <div id="create-post-popup"></div>
       <button id="HOME-create-post-button"></button>
-      <button id ="refresh-button">Refresh!</button>
+      <button id ="refresh-button"></button>
+      <div id="tag_list_container"></div>
     </div>
 
     <div id="create-post-page">
